--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -35,6 +35,7 @@
                 </div>
                 <!-- Navbar Right Side -->
                 <div class="navbar-nav">
+                    <a class="nav-item nav-link" href="">Admin</a>
                     <a class="nav-item nav-link" href="#">Login</a>
                     <a class="nav-item nav-link" href="#">Register</a>
                 </div>
