--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -20,6 +20,8 @@
 </head>
 
 <body>
+
+<!-- Header -->
 <header class="site-header">
     <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
         <div class="container">
@@ -35,9 +37,9 @@
                 </div>
                 <!-- Navbar Right Side -->
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link" href="">Admin</a>
+                    <a class="nav-item nav-link" href="/admin">Admin</a>
                     <a class="nav-item nav-link" href="#">Login</a>
-                    <a class="nav-item nav-link" href="#">Register</a>
+                    <a class="nav-item nav-link" href="{% url 'register_user' %}">Register</a>
                 </div>
             </div>
         </div>
@@ -47,12 +49,20 @@
 <main role="main" class="container">
   <div class="row">
     <div class="col-md-8">
-      {% block content %}{% endblock %}
+    {% if messages %}
+              {% for message in messages %}
+                  <div class="alert alert-{{ message.tags }}">
+                    {{ message }}
+                  </div>
+              {% endfor %}
+          {% endif %}
+      {% block content %}
+      {% endblock %}
     </div>
     <div class="col-md-4">
       <div class="content-section">
-        <h3>Our Sidebar</h3>
-        <p class='text-muted'>You can put any information here you'd like.
+        <h3>Django community</h3>
+        <p class='text-muted'>Probably later links for other content will be added.
           <ul class="list-group">
             <li class="list-group-item list-group-item-light">Latest Posts</li>
             <li class="list-group-item list-group-item-light">Announcements</li>
