--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -56,8 +56,7 @@
                   </div>
               {% endfor %}
           {% endif %}
-      {% block content %}
-      {% endblock %}
+      {% block content %}{% endblock %}
     </div>
     <div class="col-md-4">
       <div class="content-section">
