--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -37,9 +37,16 @@
                 </div>
                 <!-- Navbar Right Side -->
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link" href="/admin">Admin</a>
-                    <a class="nav-item nav-link" href="#">Login</a>
+                    {% if user.is_authenticated %}
+                    <a class="nav-item nav-link" href="{% url 'logout_user' %}">Logout</a>
+                    {% else %}
+                    <a class="nav-item nav-link" href="{% url 'login_user' %}">Login</a>
                     <a class="nav-item nav-link" href="{% url 'register_user' %}">Register</a>
+                    {% endif %}
+
+                    {% if user.is_staff %}
+                    <a class="nav-item nav-link" href="/admin">Admin panel</a>
+                    {% endif %}
                 </div>
             </div>
         </div>
@@ -58,19 +65,21 @@
           {% endif %}
       {% block content %}{% endblock %}
     </div>
-    <div class="col-md-4">
+    {% if user.is_authenticated %}
+        <div class="col-md-4">
       <div class="content-section">
-        <h3>Django community</h3>
+        <h3>{{ user.username}}'s profile</h3>
         <p class='text-muted'>Probably later links for other content will be added.
           <ul class="list-group">
-            <li class="list-group-item list-group-item-light">Latest Posts</li>
-            <li class="list-group-item list-group-item-light">Announcements</li>
-            <li class="list-group-item list-group-item-light">Calendars</li>
-            <li class="list-group-item list-group-item-light">etc</li>
+            <li class="list-group-item list-group-item-light">Name</li>
+            <li class="list-group-item list-group-item-light">Posts</li>
+            <li class="list-group-item list-group-item-light">Whatever</li>
           </ul>
         </p>
       </div>
     </div>
+    {% endif %}
+
   </div>
 </main>
 
