--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -25,7 +25,7 @@
 <header class="site-header">
     <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
         <div class="container">
-            <a class="navbar-brand mr-4" href="{% url 'blog_home' %}">Django Blog</a>
+            <h3 class="navbar-brand">Django Blog</h3>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle"
                     aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -38,14 +38,15 @@
                 <!-- Navbar Right Side -->
                 <div class="navbar-nav">
                     {% if user.is_authenticated %}
-                    <a class="nav-item nav-link" href="{% url 'logout_user' %}">Logout</a>
+                        <a class="nav-item nav-link" href="{% url 'user_profile' %}">Profile</a>
+                        <a class="nav-item nav-link" href="{% url 'logout_user' %}">Logout</a>
                     {% else %}
-                    <a class="nav-item nav-link" href="{% url 'login_user' %}">Login</a>
-                    <a class="nav-item nav-link" href="{% url 'register_user' %}">Register</a>
+                        <a class="nav-item nav-link" href="{% url 'login_user' %}">Login</a>
+                        <a class="nav-item nav-link" href="{% url 'register_user' %}">Register</a>
                     {% endif %}
 
                     {% if user.is_staff %}
-                    <a class="nav-item nav-link" href="/admin">Admin panel</a>
+                        <a class="nav-item nav-link" href="/admin">Admin panel</a>
                     {% endif %}
                 </div>
             </div>
@@ -54,33 +55,33 @@
 </header>
 
 <main role="main" class="container">
-  <div class="row">
-    <div class="col-md-8">
-    {% if messages %}
-              {% for message in messages %}
-                  <div class="alert alert-{{ message.tags }}">
-                    {{ message }}
-                  </div>
-              {% endfor %}
-          {% endif %}
-      {% block content %}{% endblock %}
-    </div>
-    {% if user.is_authenticated %}
-        <div class="col-md-4">
-      <div class="content-section">
-        <h3>{{ user.username}}'s profile</h3>
-        <p class='text-muted'>Probably later links for other content will be added.
-          <ul class="list-group">
-            <li class="list-group-item list-group-item-light">Name</li>
-            <li class="list-group-item list-group-item-light">Posts</li>
-            <li class="list-group-item list-group-item-light">Whatever</li>
-          </ul>
-        </p>
-      </div>
-    </div>
-    {% endif %}
+    <div class="row">
+        <div class="col-md-8">
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="alert alert-{{ message.tags }}">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            {% endif %}
+            {% block content %}{% endblock %}
+        </div>
+        {% if user.is_authenticated %}
+            <div class="col-md-4">
+                <div class="content-section">
+                    <h3>{{ user.username }}'s profile</h3>
+                    <p class='text-muted'>Probably later links for other content will be added.
+                    <ul class="list-group">
+                        <li class="list-group-item list-group-item-light">Name</li>
+                        <li class="list-group-item list-group-item-light">Posts</li>
+                        <li class="list-group-item list-group-item-light">Whatever</li>
+                    </ul>
+                    </p>
+                </div>
+            </div>
+        {% endif %}
 
-  </div>
+    </div>
 </main>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
