--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -39,6 +39,7 @@
                 <div class="navbar-nav">
                     {% if user.is_authenticated %}
                         <a class="nav-item nav-link" href="{% url 'user_profile' %}">Profile</a>
+                        <a class="nav-item nav-link" href="{% url 'user_edit_profile' %}">Edit profile</a>
                         <a class="nav-item nav-link" href="{% url 'logout_user' %}">Logout</a>
                     {% else %}
                         <a class="nav-item nav-link" href="{% url 'login_user' %}">Login</a>
@@ -69,8 +70,8 @@
         {% if user.is_authenticated %}
             <div class="col-md-4">
                 <div class="content-section">
-                    <h3>{{ user.username }}'s profile</h3>
-                    <p class='text-muted'>Probably later links for other content will be added.
+                    <h3>{{ user.username }}'s stats</h3>
+                    <p class='text-muted'>Probably later links for other content will be added. Later on :))
                     <ul class="list-group">
                         <li class="list-group-item list-group-item-light">Name</li>
                         <li class="list-group-item list-group-item-light">Posts</li>
