--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,5 +1,13 @@
 {% extends "blog/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
-    <h1>{{ user.username }}</h1>
+    <div class="content-section">
+        <div class="media">
+            <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
+            <div class="media-body">
+                <h2 class="account-heading">{{ user.username }} // {{ user.profile.name }}</h2>
+                <p class="text-secondary">{{ user.profile.bio_desc }}</p>
+            </div>
+        </div>
+    </div>
 {% endblock content %}
