--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -70,10 +70,10 @@
         {% if user.is_authenticated %}
             <div class="col-md-4">
                 <div class="content-section">
-                    <h3>{{ user.username }}'s stats</h3>
+                    <h3>Hello {{ user.username }}, welcome!</h3>
                     <p class='text-muted'>Probably later links for other content will be added. Later on :))
                     <ul class="list-group">
-                        <li class="list-group-item list-group-item-light">Name</li>
+                        <a href="{% url 'post_create' %}" class="list-group-item list-group-item-light">Create new post</a>
                         <li class="list-group-item list-group-item-light">Posts</li>
                         <li class="list-group-item list-group-item-light">Whatever</li>
                     </ul>
