--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -10,5 +10,22 @@
                 <p class="text-secondary">{{ user.profile.bio_desc }}</p>
             </div>
         </div>
+        <h2>Your wall</h2>
+
+        {% for post in posts %}
+
+            <article class="media content-section">
+                <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}">
+                <div class="media-body">
+                    <div class="article-metadata">
+                        <a class="mr-2" href="#">{{ post.author }}</a>
+                        <small class="text-muted">{{ post.date_posted|date:"F d, Y" }}</small>
+                    </div>
+                    <h2><a class="article-title" href="{% url 'post_detail' post.id %}">{{ post.title }}</a></h2>
+                    <p class="article-content">{{ post.content }}</p>
+                </div>
+            </article>
+        {% endfor %}
     </div>
+
 {% endblock content %}
