--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -70,7 +70,7 @@
         {% if user.is_authenticated %}
             <div class="col-md-4">
                 <div class="content-section">
-                    <h3>Hello {{ user.username }}, welcome!</h3>
+                    <h3>Hello {{ request.user.username }}, welcome!</h3>
                     <p class='text-muted'>Probably later links for other content will be added. Later on :))
                     <ul class="list-group">
                         <a href="{% url 'post_create' %}" class="list-group-item list-group-item-light">Create new post</a>
