--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -7,8 +7,8 @@
             <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}">
             <div class="media-body">
                 <div class="article-metadata">
-                    <a class="mr-2" href="#">{{ post.author }}</a>
-                    <small class="text-muted">{{ post.date_posted|date:"F d, Y" }}</small>
+                    <a class="mr-2" href="{% url 'user_view_ext_profile' post.author %}">{{ post.author }}</a>
+                    <small class="text-muted">{{ post.date_posted|date:"d F Y"}}</small>
                 </div>
                 <h2><a class="article-title" href="{% url 'post_detail' post.id %}">{{ post.title }}</a></h2>
                 <p class="article-content">{{ post.content }}</p>
