--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -5,15 +5,15 @@
         <div class="media">
             <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
             <div class="media-body">
-                <h2 class="account-heading">{{ user.first_name }} {{ user.last_name }} // {{ user.username }}</h2>
-                <p class="text-secondary">{{ user.email }}</p>
-                <p class="text-secondary">{{ user.profile.bio_desc }}</p>
+                <h2 class="account-heading">{{ user.first_name }} {{ user.last_name }}</h2>
+                <p class="text-secondary">Username: {{ user.username }}</p>
+                <p class="text-secondary">Email: {{ user.email }}</p>
+                <p class="text-secondary">Bio: {{ user.profile.bio_desc }}</p>
             </div>
         </div>
         <h2>Your wall</h2>
 
         {% for post in posts %}
-
             <article class="media content-section">
                 <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}">
                 <div class="media-body">
