--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -2,6 +2,7 @@
 {% load crispy_forms_tags %}
 {% block content %}
     <div class="content-section">
+    {% if request.user.username == user.username %}
         <div class="media">
             <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
             <div class="media-body">
@@ -11,8 +12,11 @@
                 <p class="text-secondary">Bio: {{ user.profile.bio_desc }}</p>
             </div>
         </div>
-        <h2>Your wall</h2>
 
+        <h2>Your wall</h2>
+        {% else %}
+        <h1>{{ user.username }}'s posts ({{ posts.count }})</h1>
+    {% endif %}
         {% for post in posts %}
             <article class="media content-section">
                 <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}">
@@ -27,5 +31,27 @@
             </article>
         {% endfor %}
     </div>
+
+    {% if is_paginated %}
+        {% if page_obj.has_previous %}
+            <a class="btn btn-outline-info mb-4" href="?page=1">First</a>
+            <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+        {% endif %}
+
+        {% for num in page_obj.paginator.page_range %}
+            {% if page_obj.number == num %}
+                <a class="btn btn-info mb-4" href="?page={{ num }}">{{ num }}</a>
+            {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'+3' %}
+                <a class="btn btn-outline-info mb-4" href="?page={{ num }}">{{ num }}</a>
+            {% endif %}
+        {% endfor %}
+
+        {% if page_obj.has_next %}
+            <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.next_page_number }}">Next</a>
+            <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
+        {% endif %}
+
+
+    {% endif %}
 
 {% endblock content %}
