--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -13,9 +13,9 @@
     <link rel="stylesheet" type="text/css" href="{% static 'blog/main.css' %}">
 
     {% if title %}
-        <title>Django Blog - {{ title }}</title>
+        <title>Practice Blog - {{ title }}</title>
     {% else %}
-        <title>Django Blog</title>
+        <title>Practice Blog</title>
     {% endif %}
 </head>
 
@@ -25,7 +25,7 @@
 <header class="site-header">
     <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
         <div class="container">
-            <h3 class="navbar-brand">Django Blog</h3>
+            <h3 class="navbar-brand">Practice Blog</h3>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle"
                     aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
