--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -2,22 +2,22 @@
 {% load crispy_forms_tags %}
 {% block content %}
     <div class="content-section">
-    {% if request.user.username == user.username %}
-        <div class="media">
-            <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
-            <div class="media-body">
-                <h2 class="account-heading">{{ user.first_name }} {{ user.last_name }}</h2>
-                <p class="text-secondary">Username: {{ user.username }}</p>
-                <p class="text-secondary">Email: {{ user.email }}</p>
-                <p class="text-secondary">Bio: {{ user.profile.bio_desc }}</p>
+        {% if request.user.username == user.username %}
+            <div class="media">
+                <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
+                <div class="media-body">
+                    <h2 class="account-heading">{{ user.first_name }} {{ user.last_name }}</h2>
+                    <p class="text-secondary">Username: {{ user.username }}</p>
+                    <p class="text-secondary">Email: {{ user.email }}</p>
+                    <p class="text-secondary">Bio: {{ user.profile.bio_desc }}</p>
+                </div>
             </div>
-        </div>
 
-        <h2>Your wall</h2>
+            <h2>Your wall</h2>
         {% else %}
-        <h1>{{ user.username }}'s posts ({{ posts.count }})</h1>
-    {% endif %}
-        {% for post in posts %}
+            <h1>{{ user.username }}'s posts ({{ posts.count }})</h1>
+        {% endif %}
+        {% for post in page_obj %}
             <article class="media content-section">
                 <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}">
                 <div class="media-body">
@@ -32,26 +32,22 @@
         {% endfor %}
     </div>
 
-    {% if is_paginated %}
+    <div class="pagination">
+    <span class="step-links">
         {% if page_obj.has_previous %}
-            <a class="btn btn-outline-info mb-4" href="?page=1">First</a>
-            <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+            <a href="?page=1">&laquo; first</a>
+            <a href="?page={{ page_obj.previous_page_number }}">previous</a>
         {% endif %}
 
-        {% for num in page_obj.paginator.page_range %}
-            {% if page_obj.number == num %}
-                <a class="btn btn-info mb-4" href="?page={{ num }}">{{ num }}</a>
-            {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'+3' %}
-                <a class="btn btn-outline-info mb-4" href="?page={{ num }}">{{ num }}</a>
-            {% endif %}
-        {% endfor %}
+        <span class="current">
+            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+        </span>
 
         {% if page_obj.has_next %}
-            <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.next_page_number }}">Next</a>
-            <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
+            <a href="?page={{ page_obj.next_page_number }}">next</a>
+            <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
         {% endif %}
-
-
-    {% endif %}
+    </span>
+    </div>
 
 {% endblock content %}
